<resources>
    <string name="app_name">Bossble</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">236453797798155</string>
    <string name="fb_login_protocol_scheme">fb236453797798155</string>
    <string name="title_activity_maps">Map</string>
    <string name="api_key">AIzaSyBMngaPSgufYrW0BuWHLsCweOjMzI_xuVA</string>
    <string name="Reply">Reply</string>
    <string name="Edit">Edit</string>
    <string name="Delete">Delete</string>
    <string name="Deletee">DELETE</string>
    <string name="name">name</string>
    <string name="description">description</string>
    <string name="LoadMore">Load More...</string>
    <string name="JOIN">JOIN</string>
    <string name="peoplejoined">people joined</string>
    <string name="SeeAll">See All</string>
    <string name="photo">photo</string>
    <string name="video">video</string>
    <string name="Images">Images</string>
    <string name="Videos">Videos</string>
    <string name="SelectFrom">Select From</string>
    <string name="Sorrycamerapermissionisnecessary">Sorry, camera permission is necessary</string>
    <string name="Mediashouldbelessthan20MB">Media should be less than 20MB</string>
    <string name="PermissionRequired">Permission Required!</string>
    <string name="Cannotselectvideo">Cannot select video</string>
    <string name="CannotselectTextChallenge">Cannot select Text Challenge</string>
    <string name="Cannotselectmorethan6pictures">Cannot select more than 6 pictures</string>
    <string name="Cannotselectmorethan5pictures">Cannot select more than 5 pictures</string>
    <string name="Cannotselectmorethan4pictures">Cannot select more than 4 pictures</string>
    <string name="Cannotselectmorethan3pictures">Cannot select more than 3 pictures</string>
    <string name="Cannotselectmorethan2pictures">Cannot select more than 2 pictures</string>
    <string name="Cannotselectmorethan1pictures">Cannot select more than 1 pictures</string>
    <string name="GotoAppsettingsPermissionsCameraandStorageenableit">Go to App settings > Permissions > Camera and Storage > enable it</string>
    <string name="createyourchallenge">create your challenge</string>
    <string name="createyourcampaign">create your campaign</string>
    <string name="joinNthiscampaign">join this campaign</string>
    <string name="joinNthischallenge">join this challenge</string>
    <string name="AttemptedSuccessfully">Attempted Successfully</string>
    <string name="NoMediaAdded">No Media Added</string>
    <string name="STARTACAMPAIGN">START A CAMPAIGN</string>
    <string name="CAMPAIGNTITLE">CAMPAIGN TITLE</string>
    <string name="describethiscampaign">describe this campaign</string>
    <string name="HASHTAGS">#HASHTAGS</string>
    <string name="MEDIAYOUADDED">MEDIA YOU ADDED</string>
    <string name="STARTTHISCAMPAIGN">START THIS CAMPAIGN</string>
    <string name="whatdoyouwanttocreate">what do you want to create?</string>
    <string name="campaign">campaign</string>
    <string name="challenge">challenge</string>
    <string name="Doyouwanttocancelyourcampaign">Do you want to cancel your campaign?</string>
    <string name="CampaignCreated">Campaign Created</string>
    <string name="CHALLENGETHEWORLD">CHALLENGE THE WORLD</string>
    <string name="CHALLENGETITLE">CHALLENGE TITLE</string>
    <string name="describethischallenge">describe this challenge</string>
    <string name="PEOPLE">PEOPLE</string>
    <string name="SELECTCHALLENGETYPE">SELECT CHALLENGE TYPE</string>
    <string name="WHOCANSEETHISCHALLENGE">WHO CAN SEE THIS CHALLENGE</string>
    <string name="PUBLIC">PUBLIC</string>
    <string name="SELECTLOCATION">SELECT LOCATION</string>
    <string name="POSTTHISCHALLENGE">POST THIS CHALLENGE</string>
    <string name="PRIVATE">PRIVATE</string>
    <string name="SelfChallenge">Self Challenge</string>
    <string name="oneononeChallenge">1-on-1 Challenge</string>
    <string name="GroupChallenge">Group Challenge</string>
    <string name="OpenChallenge">Open Challenge</string>
    <string name="LocationBaseChallenge">Location Base Challenge</string>
    <string name="ChallengeCreated">Challenge Created</string>
    <string name="Locationisrequired">Location is required</string>
    <string name="PeopleNotSelected">People Not Selected</string>
    <string name="TypeaTitle">Type a Title</string>
    <string name="ChooseBackground">Choose Background</string>
    <string name="Done">Done</string>
    <string name="WriteaComment">Write a Comment</string>
    <string name="Fieldisrequired">Field is required</string>
    <string name="View">View</string>
    <string name="replies">replies...</string>
    <string name="Error">\nError</string>
    <string name="Success">\nSuccess</string>
    <string name="NoInternetConnection">No Internet Connection</string>
    <string name="Somethingwentwrong">Something went wrong</string>
    <string name="Liked">Liked</string>
    <string name="Successfully">\nSuccessfully</string>
    <string name="selfChallenge">Self\nChallenge</string>
    <string name="OneononeChallenge">1-on-1\nChallenge</string>
    <string name="groupChallenge">Group\nChallenge</string>
    <string name="openChallenge">Open\nChallenge</string>
    <string name="locationBaseChallenge">Location Base\nChallenge</string>
    <string name="jointhischallenge">join this challenge</string>
    <string name="jointhiscampaign">support this campaign</string>
    <string name="NoHashtags">No Hashtags.</string>
    <string name="NoDescription">No Description.</string>
    <string name="ReportedSuccessfully">Reported Successfully</string>
    <string name="Signintoexplore">Sign-in to explore</string>
    <string name="Youcannotjoinyourownchallenge">You cannot join your own challenge</string>
    <string name="Youcannotjointhischallenge">You cannot join this challenge</string>
    <string name="Blocked">Blocked</string>
    <string name="Pressbackagaintoexit">Press back again to exit</string>
    <string name="Search">Search...</string>
    <string name="SelectRadius">Select Radius</string>
    <string name="OK">OK</string>
    <string name="NOTIFICATIONS">NOTIFICATIONS</string>
    <string name="noadmire">no admire</string>
    <string name="searchadmire">search admirers</string>
    <string name="ADMIRERS">"ADMIRERS"</string>
    <string name="noadmiring">no admiring</string>
    <string name="ADMIRING">ADMIRING</string>
    <string name="searchadmiring">search admiring</string>
    <string name="Areyousureyouwanttodeletethispost">Are you sure you want to delete this post?</string>
    <string name="CANCEL">CANCEL</string>
    <string name="message">MESSAGE</string>
    <string name="aboutme">about me</string>
    <string name="CREATED">CREATED</string>
    <string name="ATTEMPTED">ATTEMPTED</string>
    <string name="admirers">Admirers</string>
    <string name="admiring">Admiring</string>
    <string name="SCORECARD">SCORECARD</string>
    <string name="ADMIRED">admired</string>
    <string name="unadmire">unadmire</string>
    <string name="admire">admire</string>
    <string name="AdmiredSuccessfully">Admired Successfully</string>
    <string name="UnadmireSuccessfully">Unadmired Successfully</string>
    <string name="ProfileSetup">Profile Setup</string>
    <string name="FULLNAME">FULL NAME</string>
    <string name="BIO">BIO</string>
    <string name="Tellusabitaboutyourself">Tell us a bit about yourself</string>
    <string name="EMAILADDRESS">EMAIL ADDRESS</string>
    <string name="Enteryouremailaddress">Enter your email address</string>
    <string name="PHONENUMBER">PHONE NUMBER</string>
    <string name="phonenumber">Phone Number</string>
    <string name="SELECTYOURCOUNTRY">SELECT YOUR COUNTRY</string>
    <string name="SelectYourCountry">Select Your Country</string>
    <string name="DATEOFBIRTH">DATE OF BIRTH</string>
    <string name="Calendar">Calendar</string>
    <string name="SAVECONTINUE">SAVE &amp; CONTINUE</string>
    <string name="NoProfiles">No Profiles</string>
    <string name="SEARCH">SEARCH</string>
    <string name="CHALLENGE">CHALLENGE</string>
    <string name="CAMPAIGNS">CAMPAIGNS</string>
    <string name="HASHTAGSS">HASHTAGS</string>
    <string name="PROFILE">PROFILE</string>
    <string name="SEARCHCHALLENGES">SEARCH CHALLENGES</string>
    <string name="SEARCHCAMPAIGNS">SEARCH CAMPAIGNS</string>
    <string name="SEARCHHASHTAGS">SEARCH HASHTAGS</string>
    <string name="SEARCHPROFILE">SEARCH PROFILE</string>
    <string name="NoChallenges">No Challenges</string>
    <string name="NoCampaigns">No Campaigns</string>
    <string name="CHALLENGESNEARME">CHALLENGES NEAR ME</string>
    <string name="Createdby">Created by</string>
    <string name="WHODOYOUWANTTOCHALLENGE">WHO DO YOU WANT TO CHALLENGE?</string>
    <string name="searchpeople">search people</string>
    <string name="NoPeople">No People</string>
    <string name="FREQUENTLYCHALLENGED">Only users you are admiring can be selected</string>
    <string name="FREQUENTLYCHALLENGED2">Only the user you are admiring can be selected</string>
    <string name="showall">show all</string>
    <string name="NoCampaignsAvailable">No Campaigns Available</string>
    <string name="cHALLENGESNEARME">CHALLENGES\nNEAR ME</string>
    <string name="NoChallengesAvailable">No Challenges Available</string>
    <string name="TRENDINGCHALLENGES">TRENDING\nCHALLENGES</string>
    <string name="NoTrendingChallengeAvailable">No Trending Challenge Available</string>
    <string name="SKIP">SKIP</string>
    <string name="Lifeisfullofchallenges">Life is full of challenges</string>
    <string name="but">but...</string>
    <string name="onlyafewtakethemon">only a few take them on</string>
    <string name="Showtheworldyouarestrongerthanyourchallenges">Show the world\nyou are stronger than your challenges</string>
    <string name="Beyourbossandmakeanythingpossible">Be your boss and\nmake anything possible</string>
    <string name="CHALLENGES">CHALLENGES</string>
    <string name="JoinorSetchallengestoanyoneanywhereanytime">Join\nor\nSet challenges\n\nto anyone\nanywhere\nanytime</string>
    <string name="SupportorCreatecampaignsBethedrivingforce">Support\nor\nCreate campaigns\n\nBe the driving force...</string>
    <string name="DontlimityourchallengesChallengeyourlimits">Don\'t limit your challenges\nChallenge your limits</string>
    <string name="Maketheworldabetterplace">Make the world a better place</string>
    <string name="THEWORLD">THE WORLD!</string>
    <string name="SignupwithInstagram">Sign up with Instagram\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020</string>
    <string name="SignupwithGoogle">Sign up with Google\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020</string>
    <string name="Signupwithemail">Sign up with email\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020</string>
    <string name="Signupwithphone">Signup with phone\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020</string>
    <string name="Alreadyamember">Already a member?</string>
    <string name="LOGIN">LOG IN</string>
    <string name="LOG">LOG</string>
    <string name="IN">IN</string>
    <string name="OR">OR</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="ChangePassword">"Change Password"</string>
    <string name="SAVE">"SAVE"</string>
    <string name="NoReportedPost">"No Reported Post"</string>
    <string name="ReportPost">"Report Post"</string>
    <string name="SearchReportPost">"Search Report Post"</string>
    <string name="CURRENTPASSWORD">"CURRENT PASSWORD"</string>
    <string name="CurrentPassword">"Current Password"</string>
    <string name="NEWPASSWORD">"NEW PASSWORD"</string>
    <string name="NewPassword">"New Password"</string>
    <string name="CONFIRMATIONPASSWORD">"CONFIRMATION PASSWORD"</string>
</resources>