<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/r"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/createdialog_curve"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SELECTCHALLENGETYPE"
            android:textSize="18sp"
            android:id="@+id/text"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:background="@drawable/blue_text_curve"
            android:paddingTop="20dp"
            android:paddingBottom="20dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text"
            android:layout_marginTop="20dp"
            android:drawableTop="@drawable/self_challenge_icon"
            android:text="@string/selfChallenge"
            android:textColor="@color/black"
            android:layout_marginLeft="40dp"
            android:id="@+id/selfchallenge"
            android:gravity="center_horizontal"
            android:drawablePadding="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text"
            android:layout_marginTop="38dp"
            android:drawableTop="@drawable/one_on_one_icon"
            android:text="@string/OneononeChallenge"
            android:textColor="@color/black"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="40dp"
            android:id="@+id/oneononechallenge"
            android:gravity="center_horizontal"
            android:drawablePadding="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/selfchallenge"
            android:layout_marginTop="40dp"
            android:drawableTop="@drawable/group_challenge_icon"
            android:text="@string/groupChallenge"
            android:textColor="@color/black"
            android:layout_marginLeft="40dp"
            android:id="@+id/groupchallenge"
            android:gravity="center_horizontal"
            android:drawablePadding="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/oneononechallenge"
            android:layout_marginTop="22dp"
            android:drawableTop="@drawable/open_challenge_icon"
            android:text="@string/openChallenge"
            android:textColor="@color/black"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="40dp"
            android:id="@+id/openchallenge"
            android:gravity="center_horizontal"
            android:drawablePadding="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/groupchallenge"
            android:layout_marginTop="40dp"
            android:drawableTop="@drawable/location_challenge_icon"
            android:text="@string/locationBaseChallenge"
            android:textColor="@color/black"
            android:id="@+id/locationchallenge"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:gravity="center_horizontal"
            android:drawablePadding="10dp"
            />
    </RelativeLayout>
</RelativeLayout>





