<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bossble.bossble.ProfileSetup.Profile_Setup_Activity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/r100"
        >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/screen_header"
        android:scaleType="centerCrop"
        android:id="@+id/imgheader"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/ProfileSetup"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:id="@+id/txtprofile"
        />

    <com.makeramen.roundedimageview.RoundedImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        app:riv_corner_radius="100dp"
        android:scaleType="centerCrop"
        android:layout_centerHorizontal="true"
        android:src="@drawable/user_image_placeholder"
        android:layout_below="@id/imgheader"
        android:id="@+id/imgplaceholder"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imgplaceholder"
        android:layout_alignEnd="@+id/imgplaceholder"
        android:src="@drawable/upload_photo_icon"
        android:id="@+id/imgupload"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgplaceholder"
        android:textColor="@color/dark_purple"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:text="@string/FULLNAME"
        android:id="@+id/txtfullname"
        />
    
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:paddingLeft="10dp"
        android:hint="John Wick"
        android:background="@drawable/edittext_shape"
        android:layout_below="@id/txtfullname"
        android:id="@+id/edfullname"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edfullname"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/dark_purple"
        android:text="@string/BIO"
        android:id="@+id/txtbio"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingLeft="10dp"
        android:paddingBottom="80dp"
        android:layout_marginTop="5dp"
        android:hint="@string/Tellusabitaboutyourself"
        android:background="@drawable/edittext_shape"
        android:layout_below="@id/txtbio"
        android:id="@+id/edbio"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edbio"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/dark_purple"
        android:text="@string/EMAILADDRESS"
        android:id="@+id/txtemail"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingLeft="10dp"
        android:layout_marginTop="5dp"
        android:hint="@string/Enteryouremailaddress"
        android:background="@drawable/edittext_shape"
        android:layout_below="@id/txtemail"
        android:id="@+id/edemail"
        android:inputType="textEmailAddress"
        />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edemail"
            android:textColor="@color/dark_purple"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:text="@string/PHONENUMBER"
            android:id="@+id/txtphone"
            />

        <com.rilixtech.widget.countrycodepicker.CountryCodePicker
            app:ccp_defaultNameCode="DE"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:layout_marginLeft="20dp"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:layout_below="@id/txtphone"
            android:id="@+id/select_code"
            android:layout_marginTop="5dp"
            android:background="@drawable/country_code"
            android:drawablePadding="20dp"
            android:inputType="number"
            >
        </com.rilixtech.widget.countrycodepicker.CountryCodePicker>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="20dp"
            android:paddingLeft="10dp"
            android:layout_marginTop="5dp"
            android:hint="@string/PHONENUMBER"
            android:inputType="number"
            android:background="@drawable/phone_number_shape"
            android:layout_below="@id/txtphone"
            android:layout_toRightOf="@id/select_code"
            android:id="@+id/edphone"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edphone"
            android:textColor="@color/dark_purple"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:text="@string/SELECTYOURCOUNTRY"
            android:id="@+id/txtcountry"
            />

        <EditText
            android:id="@+id/edcountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:hint="@string/SelectYourCountry"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_below="@id/txtcountry"
            android:background="@drawable/edittext_shape"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edcountry"
            android:textColor="@color/dark_purple"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:text="DATE OF BIRTH"
            android:id="@+id/txtbirth"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:paddingLeft="10dp"
            android:layout_marginTop="5dp"
            android:hint="@string/Calendar"
            android:background="@drawable/edittext_shape"
            android:layout_below="@id/txtbirth"
            android:id="@+id/edbirth"
            android:cursorVisible="false"
            />


        <Button
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_below="@id/edbirth"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_purple_curve"
            android:text="@string/SAVECONTINUE"
            android:textAllCaps="false"
            android:id="@+id/btnsave"
            />


    </RelativeLayout>
    </ScrollView>

    <ImageView
        android:visibility="gone"
        android:id="@+id/avibackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#66000000"/>
    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/avi"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/AVLoadingIndicatorView"
        android:visibility="gone"
        app:indicatorName="BallPulseIndicator"
        />
</RelativeLayout>
