<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePassword_Activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/screen_header"
            android:scaleType="centerCrop"
            android:id="@+id/imgheader"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/ChangePassword"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:layout_marginTop="30dp"
            android:id="@+id/txtchangepassword"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgheader"
            android:textColor="@color/dark_purple"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:textSize="16sp"
            android:text="@string/CURRENTPASSWORD"
            android:id="@+id/txtcurrentpassword"
            />
        <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtcurrentpassword"
            android:textSize="16dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textColor="@color/black"
            android:background="@drawable/edittext_shape"
            android:hint="@string/CurrentPassword"
            android:textColorHint="@color/black"
            app:tint_color="@android:color/white"
            android:id="@+id/edcurrentpassword"
            android:maxLines="1"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edcurrentpassword"
            android:textColor="@color/dark_purple"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:textSize="16sp"
            android:text="@string/NEWPASSWORD"
            android:id="@+id/txtnewpassword"
            />
        <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtnewpassword"
            android:textSize="16dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textColor="@color/black"
            android:background="@drawable/edittext_shape"
            android:hint="@string/NewPassword"
            android:textColorHint="@color/black"
            app:tint_color="@android:color/white"
            android:id="@+id/ednewpassword"
            android:maxLines="1"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ednewpassword"
            android:textColor="@color/dark_purple"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:textSize="16sp"
            android:text="@string/CONFIRMATIONPASSWORD"
            android:id="@+id/txtconfirmpassword"
            />
        <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtconfirmpassword"
            android:textSize="16dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textColor="@color/black"
            android:background="@drawable/edittext_shape"
            android:hint="@string/ConfirmPassword"
            android:textColorHint="@color/black"
            app:tint_color="@android:color/white"
            android:id="@+id/edconfirmpassword"
            android:maxLines="1"
            />

        <Button
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_below="@id/edconfirmpassword"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_purple_curve"
            android:text="@string/SAVE"
            android:textAllCaps="false"
            android:id="@+id/btnsave"
            />



    </RelativeLayout>



    <ImageView
        android:visibility="gone"
        android:id="@+id/avibackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#66000000"/>
    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/avi"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/AVLoadingIndicatorView"
        android:visibility="gone"
        app:indicatorName="BallPulseIndicator"
        />



</RelativeLayout>