<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/r1"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/NoReportedPost"
            android:id="@+id/noreport"
            android:visibility="gone"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/screen_header"
            android:scaleType="centerCrop"
            android:id="@+id/imgheader"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/ReportPost"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:layout_marginTop="30dp"
            android:id="@+id/txtreport"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgheader"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="20dp"
            android:hint="@string/SearchReportPost"
            android:maxLines="1"
            android:background="@drawable/search_ed_background"
            android:padding="15dp"
            android:id="@+id/search"
            android:imeOptions="actionSearch"
            android:inputType="text"

            />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recyclerreport"
            android:layout_below="@+id/search"
            android:layout_marginBottom="?actionBarSize"
            android:layout_marginRight="10dp"
            >
        </androidx.recyclerview.widget.RecyclerView>




    </RelativeLayout>

    <ImageView
        android:visibility="gone"
        android:id="@+id/avibackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#66000000"/>
    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/avi"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/AVLoadingIndicatorView"
        app:indicatorName="BallPulseIndicator"

        />



</RelativeLayout>